# jadongsoseol

./: .gitignore  README.md  apply_3C4P.ipynb  fitting_letter_number.ipynb  jadongsoseol_PRD.md  jadongsoseol_PRD_prompt.md  main.py  prompt_test.ipynb  prompt_test.py  prompt_test_core_experience.py  prompt_test_motivation.py  pyproject.toml  temp.py  test.ipynb  test.py
calculation_cost/: cost.py
get_data/: get_token_price.py
get_sheet_data/: get_data.py
sheet/: modify_sheet.py
update_sheet_data/: update_sheet.py
use_llm/: generate.py
